# gptsh

./: .gitignore  Cargo.toml  README.md  gsh
src/: key_selector.rs  main.rs  openai_interface.rs  prompt_generator.rs
