[package]
name = "gsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "0.3.3", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
